--- a/composer_buscador/composer.json
+++ b/composer_buscador/composer.json
@@ -14,5 +14,15 @@
     "symfony/dom-crawler": "^6.3",
     "symfony/css-selector": "^6.3"
 
+  },
+
+  "autoload": {
+    "psr-4": {
+      "Alura\\BuscadorDeCursos\\" : "src/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit composer_buscador\\tests\\TestBuscadorDeCursos.php",
+    "cs": "phpcs --standard=PSR12 composer_buscador/src/"
   }
 }
